@Java LoginActivity / SignInActivity - ShowAlertMessage function @Java MainActivity - Logout @Res Login / SignIn - remove password text @Values strings - revert to english @Item - Add priority property @ItemActivity - Intent with adding/editing fields @ListAdapter - new list view on MainActivity

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -2,9 +2,20 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.example.kamm.todoapp.MainActivity">
+    <item android:id="@+id/add_btn"
+        android:title="@string/add_item"
+        android:icon="@drawable/ic_add_white_24dp"
+        app:showAsAction="always"/>
+    <!--<item-->
+        <!--android:id="@+id/action_export"-->
+        <!--android:orderInCategory="100"-->
+        <!--android:title="@string/action_export"-->
+        <!--android:icon="@drawable/baseline_power_settings_new_white_24dp"-->
+        <!--app:showAsAction="ifRoom" />-->
     <item
         android:id="@+id/action_logout"
         android:orderInCategory="100"
         android:title="@string/action_logout"
-        app:showAsAction="never"/>
+        android:icon="@drawable/baseline_power_settings_new_white_24dp"
+        app:showAsAction="ifRoom" />
 </menu>
