--- a/app/src/main/res/layout/row.xml
+++ b/app/src/main/res/layout/row.xml
@@ -6,22 +6,30 @@
     android:weightSum="31">
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="30dp"
         android:layout_height="wrap_content"
         android:id="@+id/row_title"
-        android:layout_weight="15"
+        android:layout_weight="10"
         />
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="30dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="30dp"
         android:id="@+id/row_date"
-        android:layout_weight="15"
+        android:layout_weight="10"
+        />
+
+    <TextView
+        android:layout_width="30dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="30dp"
+        android:id="@+id/row_priority"
+        android:layout_weight="5"
         />
 
     <CheckBox
-        android:layout_width="wrap_content"
+        android:layout_width="30dp"
         android:layout_height="wrap_content"
         android:id="@+id/row_done"
         android:clickable="false"
