--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#3ea0fc</color>
     <color name="colorPrimaryDark">#2791f5</color>
     <color name="colorAccent">#ff9c40</color>
+    <color name="colorWhite">#ffffff</color>
 </resources>
