--- a/app/src/main/res/layout/list_header.xml
+++ b/app/src/main/res/layout/list_header.xml
@@ -12,6 +12,7 @@
     android:layout_weight="10"
     android:text="@string/header_title"
     android:clickable="true"
+    android:drawableRight="@drawable/ic_arrow_drop_down_black_24dp"
     />
 
 <TextView
